--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ fixed.db
 ibcerrors.db
 results.db-journal
 accounts_with_claims.db
+evmos_mainnet_5074187_block-results.json
+attestation_accounts.db
+
